# chickies-robot

./: .gitignore  EncoderScript.ino  MBtest  README.md  frames.gv  helloWorld.py  messingWithStash.txt  testing.txt  testingDrew.py  trash
3-d-files/: LIDAR Model Stand.f3d  LIDAR_Stand v2.f3d  rplidar-a2m4-r1 v1.f3d
3D-Files/: README.md  Rotary Encoder v1.f3d
Adafruit_CircuitPython_Nunchuk/: .nunchuk_simpletest.py.swp
catkin_backup/: CMakeLists.txt
catkin_backup/scripts/: motor_driver.py  radio_receiver.py
catkin_ws/: .gitignore  frames.gv  launchStuff.sh  ros_network_set.sh
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/maps/: ens_lower_floor.yaml  frames.gv  full_map_fail.yaml  full_map_fail_two.yaml  full_map_success.yaml  lab_floor.bag  lab_floor.yaml  lab_floor_center.yaml  my_map_floor.yaml  new_ens_lower.yaml  pres_room.yaml  presentation_room.bag  robo_arena.yaml  teacher_lounge.yaml  test.bag
catkin_ws/src/base_2dnav/: CMakeLists.txt  package.xml
catkin_ws/src/base_2dnav/launch/: base.launch
catkin_ws/src/base_2dnav/node_params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
catkin_ws/src/base_2dnav/scripts/: amcl_pose_to_odom.py
catkin_ws/src/encoders/: CMakeLists.txt  package.xml
catkin_ws/src/lightcontroller/: CMakeLists.txt  (+1 more)
catkin_ws/src/motor_controller/: CMakeLists.txt  package.xml
catkin_ws/src/motor_controller/launch/: radioDrive.launch  radio_drive.launch
catkin_ws/src/motor_controller/scripts/: motor_driver.py  radio_receiver.py
catkin_ws/temporary_holding/sensor_tf/: CMakeLists.txt  package.xml
catkin_ws/temporary_holding/sensor_tf/launch/: tf_launch.launch
legacy/: sevensegvoltmeter.ino  teensy_vm_cm.ino  teensy_vm_cm_encoder.ino
legacy/FinalEncoderScript/: FinalEncoderScript.ino
legacy/Python_Nunchuk/: .nunchukMove.py.swp  nunchukMove.py
playground/: .driveTest.py.swp  Arm_Controller.ino  EncoderScriptRos.ino  bothMotors100Test.py  buttonTest.py  comports.yaml  displayStatus.py  evenMotorTest.py  evenMotorTestReverse.py  flashingLight.py  imutest.py  lidarPower.py  motorTest.py  myfile.txt  newSmoothDrive.py  old_serial_imu_pub.py  onLed.py  powerButton.py  pwmTest.py  radioDrive.py  radioTest.py  readYaml.py  serialRead.py  simpleMotorTest.py  smoothDrive.py  spinFast.py  tf_launch.launch  zeroLedTest.py  zeroLedTestOff.py  zeroMotorTest.py
playground/EncoderScriptRos/: EncoderScriptRos.ino
playground/FinalEncoderScript/: FinalEncoderScript.ino
playground/ICM20948_serial/: platformio.ini
playground/Python_Nunchuk/: .motorInterface.py.swp  .nunchukMove.py.swp  .nunchuk_simpletest.py.swp  copyDriveTest.py  motorInterface.py  nunchukMove.py
playground/Teensy_Custom_PID/: platformio.ini
playground/Teensy_Encoder_PI_Controller/: platformio.ini  pseudo.txt
playground/Teensy_encoder_report/: platformio.ini
playground/TestScript/: TestScript.ino
playground/hello/: canImport.py
playground/pico_motor_controller_dumb/: platformio.ini
resources/: comports.yaml  map_tutorial.txt
resources/3-d-files/: Back Wall.SLDPRT  Back-side bracket.SLDPRT  Bottom.SLDPRT  Emergency Button Case v2.f3d  README.md  REMcontainer.f3z  REMpole.f3d  RotaryEncoderHolder1.f3d  RotaryEncoderHolderCombined.f3d  RotaryEncoderStand.f3d  ScreenStabilizer.f3d  Side Wall.SLDPRT  StandFront.f3d  Top.SLDPRT  standSide.f3d
resources/Adafruit_CircuitPython_Nunchuk/: nunchuk_simpletest.py
resources/testing/: 2_9_22_teensy_test.txt
resources/tutorials/: Connecting to Arduino  Mapping with gmapping  Mapping with gmapping.txt  ROS Tutorial Notes.txt  SSHing into the Pi.txt  map_tutorial.txt
src/: EncoderScript.ino  README.md  sevensegvoltmeter.ino  teensy_vm_cm.ino  teensy_vm_cm_encoder.ino
transfer/testing_controller/: CMakeLists.txt  package.xml
transfer/testing_controller/scripts/: motor_driver.py  radio_receiver.py  test_controller.py  test_publisher.py
tutorials/: README.md  SSHing into the Pi.txt
(+157 files in other folders)
