<?xml version="1.0"?>
<package format="2">
  <name>base_2dnav</name>
  <version>0.0.0</version>
  <description>The base_2dnav package</description>

  <maintainer email="amurphy141@cedarville.edu">Andrew Murphy</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
