<?xml version="1.0"?>
<package format="2">
  <name>motor_controller</name>
  <version>0.0.0</version>
  <description>Motor controller subscriber to be 
	associated with the navigations stack.</description>

  <maintainer email="amurphy141@cedarville.edu">Drew Murphy</maintainer>

  <license>BSD</license>

  <author email="amurphy141@cedarville.edu">Drew Murphy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>gpiozero></depend>
</package>
